--- a/web-client/Dockerfile
+++ b/web-client/Dockerfile
@@ -6,7 +6,9 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install -g npm@10.2.5
+
+RUN npm install --force
 
 COPY . .
 
@@ -20,7 +22,7 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --only=production
+RUN npm install --force --only=production
 
 COPY --from=builder /app/.next ./.next
 
